// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIAutocompleter has data-automationid set on the input, list, dropdown and container 1`] = `
<div
  className="xui-autocompleter"
  data-automationid="baseAC--container"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid="baseAC--dropdown"
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid="baseAC"
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid="baseAC--input"
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter inserts the searchValue inside the input 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value="a"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter renders with a hidden label 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-label="Im a little label"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter renders with the provided label 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <label
          className="xui-text-label xui-fieldlabel-layout"
          data-automationid={null}
          htmlFor="xui-testAutocompleterId"
        >
          Im a little label
        </label>
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should not add padding classes to the input when pills prop is an empty array 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the input element when passed in the inputClassName prop 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="test-class xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the root node when passed in the className prop 1`] = `
<div
  className="test-class xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a class on the trigger element when passed in the triggerClassName prop 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      className="test-class"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render a placeholder inside the input when passed in 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      >
        Search
      </div>
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-label="Search"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            placeholder="Search"
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render an id on the input when a value is passed to the inputId prop 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="test-inputId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render an id on the root node when passed in the id prop 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  id="test-id"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should render as disabled when isDisabled prop is true 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium xui-textinput-is-disabled"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            disabled={true}
            id="xui-testAutocompleterId"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`XUIAutocompleter should respect a max length of the input value when the maxLength has a value 1`] = `
<div
  className="xui-autocompleter"
  data-automationid={null}
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    aria-expanded={false}
    className="xui-dropdown--toggledwrapper"
    data-automationid={null}
    data-ref="toggled-wrapper"
    role="combobox"
  >
    <div
      aria-haspopup="listbox"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      tabIndex={-1}
    >
      <div
        aria-hidden={true}
        className="xui-autocompleter--textinputplaceholder"
      />
      <div
        className="xui-textinputwrapper"
        onKeyDown={[Function]}
        role="presentation"
      >
        <div
          className="xui-textinput xui-textinput-medium"
          data-automationid={null}
          onClick={[Function]}
        >
          <input
            aria-autocomplete="list"
            aria-multiline={false}
            className="xui-autocompleter--textinput xui-textinput--input xui-textinput--input-medium"
            data-automationid={null}
            id="xui-testAutocompleterId"
            maxLength={5}
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            role="textbox"
            style={
              Object {
                "flexBasis": undefined,
                "maxHeight": undefined,
              }
            }
            value="123456"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
